Added group description

--- a/_data/municipal-courts.yml
+++ b/_data/municipal-courts.yml
@@ -1,5 +1,5 @@
 - group-title: Municipal Courts
-  group-description:
+  group-description: The City of Atlanta Municipal Court serves as the court of jurisdiction for the City of Atlanta.  The Court processes traffic violations, City of Atlanta municipal code violations as well as a number of minor crimes and quality of life violations. The Court is comprised of the Judiciary, City Solicitors, and Public Defenders. Each plays a role in resolving cases that are brought before the Court. The goal of the Court is to fairly process and resolve citations as efficiently as possible. 
   charts:
     - title: Criminal
       description:
