--- a/_data/core-customer-services.yml
+++ b/_data/core-customer-services.yml
@@ -1,4 +1,4 @@
-- group-title: Code Enforcement
+- group-title: Code Enforcement 1
   group-description: How quickly the City inspects complaints related to the minimum standards of base equipment and facilities, light, ventilation, heating, and safe and sanitary dwellings.
   charts:
     - title: Request Volume
