--- a/_data/atlanta-police-department.yml
+++ b/_data/atlanta-police-department.yml
@@ -1,8 +1,8 @@
-- group-title: Crime Reduction
+- group-title: Section I -Crime Reduction
   group-description:
   charts:
-    - title: Overall Crime
-      description: Total Year-Over-Year change in the number of Uniform Crime Rate (UCR) Crimes committed by year across the City of Atlanta. This data is published by the Federal Bureau of Investigation.
+    - title: Overall Crime - Total Year-Over-Year change in the number of Uniform Crime Rate (UCR) Crimes committed by year across the City of Atlanta
+      description: This data is calculated on a Year-to-date basis. This data is published by the Federal Bureau of Investigation.
       note:
       size: full
       department: APD
@@ -13,8 +13,8 @@
       series1-format: percentage
       series1-label: Year-Over-Year Change
 
-    - title: Crime By Zone
-      description: Total Year-Over-Year change in the number of Uniform Crime Rate (UCR) Crimes committed by year within each of the City's Police zones. This data is published by the Federal Bureau of Investigation.
+    - title: Crime By Zone - Total Year-Over-Year change in the number of Uniform Crime Rate (UCR) Crimes committed by year within each of the City's Police zones
+      description: This data is calculated on a Year-to-date basis. This data is published by the Federal Bureau of Investigation.
       note:
       size: full
       department: APD
@@ -25,12 +25,12 @@
       series1-format: percentage
       series1-label: Year-Over-Year Change
 
-- group-title: e911 Call Center
+- group-title: Section II - e911 Call Center Performance
   group-description:
   charts:
-    - title: Total Dispatched Calls and Performance
-      description: Total number of calls dispatched by the E911 call center every month as well as the number of calls that the Center is able to answer in 10 seconds or less.
-      note: These are year over year changes.
+    - title: Total Dispatched Calls and Percent of Calls Answered Within 10 Seconds
+      description: This data is calculated on a month-to-month basis
+      note:
       size: full
       department: APD
       datasource: e911_call_center
