--- a/_data/atlanta-police-department.yml
+++ b/_data/atlanta-police-department.yml
@@ -26,7 +26,7 @@
       series1-label: Year-Over-Year Change
 
 - group-title: Section II - e911 Call Center
-  group-description: This chart displays data on the volume of calls dispatched by the e911 Center and the Center's ability to quickly answer calls.
+  group-description: 
   charts:
     - title: Total Dispatched Calls and Call Answering Performance
       description: Total number of calls dispatched by the E911 call center every month as well as the number of calls that the Center is able to answer in 10 seconds or less.
