--- a/_data/atlanta-police-department.yml
+++ b/_data/atlanta-police-department.yml
@@ -2,7 +2,7 @@
   group-description:
   charts:
     - title: Change in crime across City of Atlanta
-      description: Total Year-Over-Year change in the number of Uniform Crime Rate (UCR) Crimes committed by year across the City of Atlanta.
+      description: Total Year-Over-Year change in the number of Uniform Crime Rate (UCR) Crimes committed across the City of Atlanta.
       note: This data is published by the Federal Bureau of Investigation.
       size: full
       department: APD
@@ -14,7 +14,7 @@
       series1-label: Year-Over-Year Change
 
     - title: Change in crime By Police Zone
-      description: Total Year-Over-Year change in the number of Uniform Crime Rate (UCR) Crimes committed by year within each of the City's Police zones.
+      description: Total Year-Over-Year change in the number of Uniform Crime Rate (UCR) Crimes committed within each of the City's Police zones.
       note: This data is published by the Federal Bureau of Investigation.
       size: full
       department: APD
