--- a/_data/watershed-management.yml
+++ b/_data/watershed-management.yml
@@ -1,1 +1,15 @@
 watershed-management.yml
+- group-title: Section I - Crime Reduction
+  group-description:
+  charts:
+    - title: Change in crime across City of Atlanta
+      description: Total Year-Over-Year change in the number of Uniform Crime Rate (UCR) Crimes committed across the City of Atlanta.
+      note: This data is published by the Federal Bureau of Investigation.
+      size: full
+      department: APD
+      datasource: overall_crime
+      series-grouping: false
+      series1-metric: Result
+      series1-type: column
+      series1-format: percentage
+      series1-label: Year-Over-Year Change
