--- a/_data/atlanta-police-department.yml
+++ b/_data/atlanta-police-department.yml
@@ -3,7 +3,7 @@
   charts:
     - title: Change in crime across City of Atlanta
       description: Total Year-Over-Year change in the number of Uniform Crime Rate (UCR) Crimes committed across the City of Atlanta.
-      note: This data is published by the Federal Bureau of Investigation.
+      note: This data is published by the Federal Bureau of Investigation
       size: full
       department: APD
       datasource: overall_crime
@@ -15,7 +15,7 @@
 
     - title: Change in crime By Police Zone
       description: Total Year-Over-Year change in the number of Uniform Crime Rate (UCR) Crimes committed within each of the City's Police zones.
-      note: This data is published by the Federal Bureau of Investigation.
+      note: This data is published by the Federal Bureau of Investigation
       size: full
       department: APD
       datasource: crime_by_zone
