--- a/_data/watershed-management.yml
+++ b/_data/watershed-management.yml
@@ -1,14 +1,67 @@
-- group-title: Section I - Crime Reduction
+- group-title: Section I - Customer Service
   group-description:
   charts:
-    - title: Change in crime across City of Atlanta
-      description: Total Year-Over-Year change in the number of Uniform Crime Rate (UCR) Crimes committed across the City of Atlanta.
-      note: This data is published by the Federal Bureau of Investigation.
+    - title: Timeliness of Completion of Customer Service Requests
+      description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the Department's target timeframes
       size: full
-      department: APD
-      datasource: overall_crime
+      department: DWM
+      datasource: dwm_customer_service
+      series-grouping: true
+      series1-metric: Volume
+      series1-type: column
+      series1-format: Number
+      series1-label: Total Service Requests
+      series2-metric: Result
+      series2-type: line
+      series2-format: percentage
+      series2-label: Resolved Within Target Timeframe
+      
+    - title: Estimated Bills as a Percent of Bills Issued
+      description: The percentage of all water bills that are estimated rather than based on actual water usage
+      size: half
+      department: DWM
+      datasource: estimated_bills
+      series-grouping: false
+      series1-metric: Result
+      series1-type: line
+      series1-format: number
+      series1-label: Percent Estimated Bills
+    
+    - title: Billing Complaints per 1000 Accounts
+      description: The number of billing-related complaints received for every 1000 customer accounts
+      size: half
+      department: DWM
+      datasource: billing_complaints
       series-grouping: false
       series1-metric: Result
       series1-type: column
-      series1-format: percentage
-      series1-label: Year-Over-Year Change
+      series1-format: number
+      series1-label: Percent Estimated Bills    
+
+- group-title: Section II - Infrastructure
+  group-description:
+  charts:
+    - title: Water System Breaks and Leaks
+      description: Water system breaks per 100 miles of pipe and leaks per 1000 customer accounts
+      size: full
+      department: DWM
+      datasource: infrastructure
+      series-grouping: true
+      series1-metric: Result
+      series1-type: line
+      series1-format: number
+      series1-label: Number
+
+- group-title: Section III - Compliance
+  group-description:
+  charts:
+    - title: Drinking Water and Waste Water Compliance Rates
+      description: The compliance rate for waste and drinking water, as measured by a percentage of the prior 365 days
+      size: full
+      department: DWM
+      datasource: compliance
+      series-grouping: true
+      series1-metric: Result
+      series1-type: line
+      series1-format: percent
+      series1-label: Percentage of Days in Compliance
