--- a/_data/parks-and-rec.yml
+++ b/_data/parks-and-rec.yml
@@ -1,1 +1,53 @@
-parks-and-rec.yml
+- group-title: Section I - Customer Service and Park Maintenance
+  group-description:
+  charts:
+    - title: Timeliness of Completion of Customer Service Requests
+      description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the Department's target timeframes
+      size: full
+      department: DPR
+      datasource: dpr_customer_service
+      series-grouping: true
+      series1-metric: Volume
+      series1-type: column
+      series1-format: Number
+      series1-label: Total Service Requests
+      series2-metric: Result
+      series2-type: line
+      series2-format: percentage
+      series2-label: Resolved Within Target Timeframe
+      
+    - title: Mowing Completed on Schedule
+      description: The percentage of scheduled park mowing that is completed on schedule
+      size: full
+      department: DPR
+      datasource: park_maintenance
+      series-grouping: false
+      series1-metric: Result
+      series1-type: line
+      series1-format: percentage
+      series1-label: Completed on Schedule
+    
+- group-title: Section II - Recreation Center Attendance and Programming
+  group-description:
+  charts:
+    - title: Recreation Center Attendance
+      description: Total recreation center visits and active recreation center memberships
+      size: full
+      department: DPR
+      datasource: rec_center_attendance
+      series-grouping: true
+      series1-metric: Result
+      series1-type: column
+      series1-format: Number
+      series1-label: Total people
+
+    - title: Youth Attendance and Programming
+      description: Total youth being served by a variety of Recreation programs
+      size: full
+      department: DPR
+      datasource: youth_programming
+      series-grouping: true
+      series1-metric: Result
+      series1-type: column
+      series1-format: Number
+      series1-label: Total Youth Served
