--- a/_data/public-works.yml
+++ b/_data/public-works.yml
@@ -27,7 +27,7 @@
       series1-format: percentage
       series1-label: Percent collected on schedule
     
-- group-title: Section I - Office of Transportation
+- group-title: Section II - Office of Transportation
   group-description:
   charts:
     - title: Timeliness of Completion of Customer Service Requests
