--- a/_data/office-of-buildings.yml
+++ b/_data/office-of-buildings.yml
@@ -1,1 +1,62 @@
-office-of-buildings.yml
+- group-title: Section I - Customer Service
+  group-description:
+  charts:
+    - title: Timeliness of Completion of Customer Service Requests
+      description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the Department's target timeframes
+      size: full
+      department: DPCD
+      datasource: oob_customer_service
+      series-grouping: true
+      series1-metric: Volume
+      series1-type: column
+      series1-format: Number
+      series1-label: Total Service Requests
+      series2-metric: Result
+      series2-type: line
+      series2-format: percentage
+      series2-label: Resolved Within Target Timeframe
+      
+    - title: Quality Control Review Efficiency
+      description: The percentage of submitted plans that are approved after first Quality Control Review (QCR)
+      size: full
+      department: DPCD
+      datasource: oob_plan_review
+      series-grouping: false
+      series-grouping: true
+      series1-metric: Volume
+      series1-type: column
+      series1-format: Number
+      series1-label: Plans Submitted for QCR
+      series2-metric: Result
+      series2-type: line
+      series2-format: percentage
+      series2-label: Plans Approved After First QCR
+    
+- group-title: Section II - Building Permits
+  group-description:
+  charts:
+    - title: Number of Building Permits Issued
+      description: Total building permits issued within the current fiscal year
+      size: full
+      department: DPCD
+      datasource: building_permits_overall
+      series-grouping: false
+      series1-metric: Result
+      series1-type: column
+      series1-format: number
+      series1-label: Total FYTD Permits Issued
+      series2-metric: Volume
+      series2-type: line
+      series2-format: number
+      series2-label: Monthly Permits Issued
+
+    - title: Detailed Breakdown of Permit Types
+      description: Percentage of various permit types as a percent of total permits issued
+      size: full
+      department: DPCD
+      datasource: building_permits_detail
+      series-grouping: true
+      series1-metric: Result
+      series1-type: line
+      series1-format: percentage
+      series1-label: Percent of Total
