--- a/_data/municipal-court.yml
+++ b/_data/municipal-court.yml
@@ -14,7 +14,7 @@
       series1-label: Cases filed
       series2-metric: Result
       series2-type: line
-      series2-format: percantage
+      series2-format: percentage
       series2-label: Disposed of within 10 days
 
 - group-title: Section II - Traffic Cases
@@ -33,5 +33,5 @@
       series1-label: Cases filed
       series2-metric: Result
       series2-type: line
-      series2-format: percantage
+      series2-format: percentage
       series2-label: Disposed of within 10 days
